# jeopardy

./: CMakeLists.txt  Makefile  answer.cpp  answer.h  answer.ui  doublejeopardy.cpp  doublejeopardy.h  editor.cpp  editor.h  gamefield.cpp  gamefield.h  jeopardy.cpp  jeopardy.desktop  jeopardy.h  jeopardy.pro  podium.cpp  podium.h  ui_answer.h  ui_dialog.h  ui_doublejeopardy.h  ui_editor.h  ui_gamefield.h  ui_jeopardy.h  ui_podium.h
.github/workflows/: build.yaml
gameStates/backups/: backup_1_1746980917.jgs
